dynamically_typed_tests/invalid/function/functionBadParam.wacc
# function parameter type mismatch

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
	int f(int x) is
		return x
	end
	b = true ; 
  x = call f(b) 
end
	
